--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,71 @@
-flask
-opencv-python
-face-recognition
-numpy
-pyautogui
-dlib
-PyAudio
-SpeechRecognition
-selenium
-google-generativeai
+annotated-types==0.7.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.0
+cmake==4.0.2
+dlib==19.24.9
+exceptiongroup==1.3.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+Flask==3.1.1
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.169.0
+google-auth==2.40.1
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+grpcio==1.71.0
+grpcio-status==1.71.0
+gunicorn==23.0.0
+h11==0.16.0
+httplib2==0.22.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+MouseInfo==0.1.3
+numpy==2.2.5
+opencv-python==4.11.0.86
+outcome==1.3.0.post0
+packaging==25.0
+pillow==11.2.1
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+PyAudio==0.2.14
+PyAutoGUI==0.9.54
+pydantic==2.11.4
+pydantic_core==2.33.2
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyobjc-core==11.0
+pyobjc-framework-Cocoa==11.0
+pyobjc-framework-Quartz==11.0
+pyparsing==3.2.3
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+PySocks==1.7.1
+pytweening==1.2.0
+requests==2.32.3
+rsa==4.9.1
+rubicon-objc==0.5.0
+selenium==4.32.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+SpeechRecognition==3.14.3
+tqdm==4.67.1
+trio==0.30.0
+trio-websocket==0.12.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+uritemplate==4.1.1
+urllib3==2.4.0
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
